test/ui/tests/fail/class-constructor-self-receiver.rs
struct Example;

#[neon::class]
impl Example {
    fn new(&self) -> Self {
        Example
    }
}

fn main() {}
