test/ui/tests/fail/class-constructor-self-receiver.stderr
error: Constructor methods cannot have a `self` receiver
 --> tests/fail/class-constructor-self-receiver.rs:5:12
  |
5 |     fn new(&self) -> Self {
  |            ^^^^^
